# expression_fetcher

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yaml  appveyor.yml
lib/: expression_fetcher.h  private_impl.h
src/: main.cpp  test_dump_corner_case.cpp  test_dump_expressions.cpp  tests.cpp  tests.h  unittests.h
src/unittests/: CMakeLists.txt  main.cpp  unittests.cpp
src/unittests/tests/: test_dump_corner_case.cpp  test_dump_expressions.cpp  test_dump_types.cpp  test_eval_condition.cpp
